--- a/test/sampling.html
+++ b/test/sampling.html
@@ -136,11 +136,16 @@
 				}
 			function selectrow(name, status){
 				if (status && selections.length==3){
-					this.checked = false;
+					this.__selected = false;
+					d3.select(this)
+						.attr('font-weight', 'normal')
+						.attr('fill', '#9e9e9e');
 					return;
 				};
+				
 				if (status){
 					selections.push(name);
+					console.log('status', status, name);
 					d3.selectAll('.color-transfer')
 						.filter(d=>d.parent.name==name)
 						.attr('display', null)
